@@ -108,6 +108,7 @@ from ErrorDialogue import ErrorDialogue
 from _Variant import _Variant
 from VectorDataWidget import VectorDataWidget
 from PathVectorDataWidget import PathVectorDataWidget
+from ProgressBar import ProgressBar
 
 # then stuff specific to graph uis
 
