@@ -1,6 +1,5 @@
 ##########################################################################
 #  
-#  Copyright (c) 2011, John Haddon. All rights reserved.
 #  Copyright (c) 2011, Image Engine Design Inc. All rights reserved.
 #  
 #  Redistribution and use in source and binary forms, with or without
@@ -35,34 +34,38 @@
 #  
 ##########################################################################
 
-from WidgetTest import WidgetTest
-from MenuTest import MenuTest
-from SplitContainerTest import SplitContainerTest
-from WindowTest import WindowTest
-from ListContainerTest import ListContainerTest
-from EventSignalCombinerTest import EventSignalCombinerTest
-from FrameTest import FrameTest
-from NameGadgetTest import NameGadgetTest
-from LinearContainerTest import LinearContainerTest
-from NodeGadgetTest import NodeGadgetTest
-from GadgetTest import GadgetTest
-from TabbedContainerTest import TabbedContainerTest
-from GraphEditorTest import GraphEditorTest
-from WidgetSignalTest import WidgetSignalTest
-from EventLoopTest import EventLoopTest
-from SplinePlugGadgetTest import SplinePlugGadgetTest
-from TextWidgetTest import TextWidgetTest
-from CheckBoxTest import CheckBoxTest
-from ImageTest import ImageTest
-from ButtonTest import ButtonTest
-from CollapsibleTest import CollapsibleTest
-from ImageGadgetTest import ImageGadgetTest
-from StandardNodeGadgetTest import StandardNodeGadgetTest
-from ColorSwatchTest import ColorSwatchTest
-from VariantTest import VariantTest
-from GridContainerTest import GridContainerTest
-from NoduleTest import NoduleTest
-from ProgressBarTest import ProgressBarTest
+import unittest
 
+import GafferUI
+
+class ProgressBarTest( unittest.TestCase ) :
+
+	def testConstructor( self ) :
+				
+		b = GafferUI.ProgressBar()
+		
+		self.assertEqual( b.getRange(), ( 0, 100 ) )
+		self.assertEqual( b.getProgress(), 0 )
+		self.assertEqual( b.getText(), "%p%" )
+		
+		b = GafferUI.ProgressBar( 10, ( 5, 15 ), "doing something %p%" )
+		self.assertEqual( b.getRange(), ( 5, 15 ) )
+		self.assertEqual( b.getProgress(), 10 )
+		self.assertEqual( b.getText(), "doing something %p%" )
+			
+	def testAccessors( self ) :
+	
+		b = GafferUI.ProgressBar()
+		
+		b.setRange( ( 0, 20 ) )
+		self.assertEqual( b.getRange(), ( 0, 20 ) )
+		
+		b.setProgress( 10 )
+		self.assertEqual( b.getProgress(), 10 )
+		
+		b.setText( "woteva" )
+		self.assertEqual( b.getText(), "woteva" )
+		
 if __name__ == "__main__":
 	unittest.main()
+	
